@@ -1,3 +1,6 @@
+Upcoming:
+- Clipboard support in the controller is working again
+
 1.15-2.1.11:
 - Update to latest McJtyLib
 
